--- a/springboot-backend/src/main/resources/application.properties
+++ b/springboot-backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_management_system?useSSL=false
 
+# sample data:
+spring.datasource.username=root
+spring.datasource.password=Password
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
